<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ZAHRAN</string>
    <string name="عمر">عمر</string>
    <string name="زهران">زهران</string>
    <string name="شجرة_عائلة">شجرة عائلة</string>

    <string name="اضافة">اضافة للعائلة</string>
    <string name="معلومات">حول العائلة</string>
    <string name="المطور">مطور التطبيق</string>
    <string name="مشاركة">مشاركة</string>
    <string name="تقييم">تقييم</string>
    <string name="المزيد">المزيد من التطبيقات</string>
    <string name="حول_التطبيق">حول التطبيق</string>


    <string name="mail">Mail</string>
    <string name="whats">WhatsApp</string>


    <string name="مشاركة_بواسطة">مشاركة بواسطة :</string>
    <string name="عنوان_المشاركة">يسعدنا انضامك إلي العائلة 👨‍👩‍👧‍👦</string>
    <string name="نص_المشاركة">شاهد شجرة عائلتك واضف اسرتك وتعرف علي أقربائك في جميع أنحاء العالم</string>

    <string name="عنوان_الميل">اضافة/تعديل أسماء للعائلة</string>
    <string name="نص_الميل">برجاء إضافة الأسماء التالية للعائلة :</string>
    <string name="لا_يوجد_ميل">لا يوجد تطبيق لإرسال الميل</string>
    <string name="لا_يوجد_واتس">تطبيق الواتساب غير مثبت علي هذا الجهاز</string>

    <string name="لا_يوجد_جوجول">متجر جوجل غير مثبت علي هذا الجهاز</string>


    <string name="الرقم">201095449725</string>
    <string name="الميل">AHamdy2508@yahoo.com</string>

    <string name="add_header">يسعدنا انضمامك للعائلة</string>
    <string name="add_body1">برجاء العلم أننا نبذل قصاري جهدنا ونتحري عن الأسماء المضافة لكي تكون شجرة العائلة صحيحة تماما ، ومع ذلك فإن المعلومات الواردة فيها قد يشوبها القليل من الخطأ ، لذا .. إذا صادفت خطأ ما برجاء سرعة التواصل وتوضيح الخطأ للتعديل .</string>
    <string name="add_body2">للإضافة أو التعديل يرجي التواصل من خلال الوسائل التالية :</string>

    <string name="information_body">عائلة زهران واحدة من أكبر العائلات الموجودة في جمهورية مصر العربية ، ولها فروع منتشرة في جميع المحافظات . ففي الشرقية نشأ من أولاد زهران كل من عثمان ومحمد ومتولي وحسن بقرية الزنكلون مركز الزقازيق ، وفي المنوفية نشأ من أولاد زهران كل من بركات وعبدالمطلب وأحمد وفهيمة وفريدة ، كما يوجد فروع أخري للعائلة محافظة القاهرة والجيزة والقليوبية والبحيرة والغربية والاسكندرية وشمال سيناء وفي صعيد مصر. \n \n وحرصا منا علي لم شمل العائلة وسعينا الدائم لجمع العائلة من جديد قمنا بعمل هذا التطبيق وتم تسجيل ما تيسر لنا من أبناء العائلة الموجودة بمحافظة الشرقية من أبناء عثمان ومحمد ومتولي وحسن ومعظمهم يسكن في قرية الزنكلون ومدينة الزقازيق ومدينة منيا القمح والقاهرة والقليوبية والاسكندرية. \n \n ولم يكن لدينا معلومات كافية لأبناء العائلة لذا تم تسجيل المعلومات المتاحة لنا في هذا الاصدار علي أن يتم التحديث واضافة الأسماء الجديدة التي تصلنا إلي قاعدة البيانات في تحديث دوري بعد أن يتم التأكد من ان هذه الأسماء من أبناء العائلة.</string>

    <string name="about_text1">لم الشمل والتعارف بين أبناء العائلة بغرض صلة الرحم</string>
    <string name="about_text2">تم إضافة المزيد من الأسماء لشجرة العائلة \n تم إضافة اسم الشهرة \n تم حل بعض المشكلات التقنية \n توافق التطبيق مع أصدارات أقدم من أندرويد \n تحسينات في واجهة المستخدم \n تم إضافة الاشعارات</string>
    <string name="about_text3">امكانية الاضافة والتعديل علي قاعدة البيانات مباشرة \n اضافة حساب خاص لكل اسم يحتوي علي كافة المعلومات عنه \n اضافة شات جماعي لأبناء العائلة \n اضافة صفحة خاصة بمناسبات العائلة \n اضافة صفحة خاصة بالاعلانات والخصومات المقدمة لأبناء العائلة \n \n لمزيد من الاقتراحات يرجي التواصل من خلال :</string>


    <string name="notification_title">يسعدنا انضامك إلي العائلة 👨‍👩‍👧‍👦</string>
    <string name="notification_text">ساهم معنا في إكمال شجرة عائلتك بمشاركة التطبيق مع أقاربك وأصدقائك.</string>
    <string name="main_notification_channel_name">Primary</string>

</resources>
